--- a/main.ppt/content.tex
+++ b/main.ppt/content.tex
@@ -1,3 +1,13 @@
+\begin{frame}{What is a Knot Theory?}
+$$\includegraphics[width=.3\linewidth]{figure/shoelace.png}$$
+\end{frame}
+
+\begin{frame}{What is a Knot Theory?}
+	\begin{itemize}
+		\item \term{Knot theory} is a field of mathematics that studies simple closed curves embedded in three-dimensional space.
+	\end{itemize}
+\end{frame}
+
 \section{Introduction}
 \begin{frame}{$\mathbf{\theta}$-Curves}
 	\begin{itemize}
