--- a/main.ppt/main.tex
+++ b/main.ppt/main.tex
@@ -91,7 +91,7 @@
 \input{setup-plots.tex}
 
 
-\title{The Determinant and an Arc Index of \\ Theta Curve and Handcuff-Graph}
+\title{The Arc Index of Theta-Curve and Handcuff Graph}
 \author{\centerline{
 	Eunchan Cho\inst{1} \and
 	Jeongwon Shin\inst{1} \and
@@ -115,8 +115,8 @@
 	\titlepage
 \end{frame}
 
-%\include{intro.tex}
-\include{cromwell1.tex}
+\include{intro.tex}
+% \include{cromwell1.tex}
 %\include{cromwell2.tex}
 %\include{L Bound.tex}
 
