--- a/main.ppt/cromwell1.tex
+++ b/main.ppt/cromwell1.tex
@@ -18,7 +18,7 @@
 	\end{thm}
 	\mypf
 	\begin{tabu}{X[5c]X[2c]X[5c]X[c]X[2c]}
-			\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/Trefoilimage.png}} &
+			\raisebox{-1.5cm}{\includegraphics[height=3cm]{trefoilimage.png}} &
 			$\xmapsto{\text{grid diagram}}$ &
 			\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/gridtheta.png}} &
 			$\xmapsto{THC-cromwell}$ &
@@ -172,10 +172,9 @@
 			0 & 0 & \textcolor{RoyalBlue}{1} & 0 & \textcolor{RoyalBlue}{1} \\
 			\textcolor{RoyalBlue}{1} & 0 & 0 & \textcolor{RoyalBlue}{1} & 0\\
 		\end{bmatrix}$ &
-	\end{tabu}
-	\begin{tabu}{X[5c]x[c]X[5c]X[c]X[5c]}
+	\end{tabu} \\
+	\begin{tabu}{X[c]X[5c]X[c]X[5c]}
 		$\xmapsto[operations]{row/column}$ &
-		\raisebox{-1.5cm}{\includegraphics[height=0.1cm]{figure/white.png}}&
 		$\begin{bmatrix}
 			\textcolor{RoyalBlue}{1} & 0 & 0 & 0 & 0\\
 			\textcolor{RoyalBlue}{1} & \textcolor{RoyalBlue}{1} & 0 & 0 & 0\\
@@ -184,7 +183,7 @@
 			0 & 0 & 0 & \textcolor{RoyalBlue}{1} & 0\\
 		\end{bmatrix}$ &
 		$\xmapsto{subtracting}$ &
-	$\begin{bmatrix}
+		$\begin{bmatrix}
 			\textcolor{red}{1} & 0& 0 & 0 & 0 \\
 			0 & \textcolor{red}{1} & 0 & 0 & 0\\
 			0 & 0 & \textcolor{red}{1} & 0 & \textcolor{red}{1}\\
