--- a/main.ppt/intro.tex
+++ b/main.ppt/intro.tex
@@ -81,9 +81,11 @@
 		\item The \term{grid diagram} of a theta-curve or handcuff graph is a diagram of vertical strands and one less number of horizontal strands.
 		\item At every crossing the vertical strand crosses over the horizontal strand and no two horizontal segments are co‐linear and no two vertical segments are co‐linear.
 	\end{itemize}
-\begin{figure}
-    \centerline{\includegraphics[width=0.75\linewidth]{../figs/An_arc_presentation_and_a_grid_diagram_of_the_knot.png}}
-\end{figure}
+    \centering
+    \begin{tabu}{X[c]X[c]}
+        \raisebox{-1cm}{\includegraphics[height=4cm]{grid_diagram_1.png}} &
+        \raisebox{-1cm}{\includegraphics[height=4cm]{grid_diagram_2.png}} \\
+    \end{tabu}
 \end{frame}
 
 \begin{frame}{Cromwell Matrix}
@@ -112,4 +114,14 @@
     \end{tabu}
     \end{center}
 \end{frame}
+
+\begin{frame}{Arc Presentation of the Theta-Curve and Handcuff Graph}
+	\mypf
+    \begin{center}
+    \begin{tabu}{c}
+        \includegraphics[width=0.8\linewidth]{crossing_change_example.jpg}
+    \end{tabu}
+    \end{center}
+\end{frame}
+
 
