--- a/main.ppt/main.tex
+++ b/main.ppt/main.tex
@@ -102,8 +102,7 @@
 }
 \date{
 	\begin{flushright}
-		SEP 6, 2025\\
-		학회이름
+		SEP 6, 2025
 	\end{flushright}
 	}
 
@@ -115,8 +114,8 @@
 	\titlepage
 \end{frame}
 
-%\include{intro.tex}
-\include{cromwell1.tex}
+\include{intro.tex}
+% \include{cromwell1.tex}
 %\include{cromwell2.tex}
 %\include{L Bound.tex}
 
