--- a/main.ppt/intro.tex
+++ b/main.ppt/intro.tex
@@ -81,7 +81,7 @@
         \item (number of vertical strands) + 1 = (number of horizontal strands)
         \item At every crossing, the vertical strand crosses over the horizontal strand.
         \item No two horizontal strands are in the same row.
-        \item No two vertical strands are in same strand.
+        \item No two vertical strands are in same column.
     \end{itemize}
 \end{frame}
 
