--- a/main.ppt/intro.tex
+++ b/main.ppt/intro.tex
@@ -18,8 +18,8 @@
 
 \begin{frame}{Handcuff Graphs}
 	\begin{itemize}
-		\item \term{Handcuff graph} H is the graph which consists of two loops and an edge jointing the vertices of each loop.
-		\item A \term{constituent link $H_{12}$}, is a subgraph of $H$
+		\item A \term{handcuff graph} H is a graph embedded in $S^3$ consisting of two vertices ($v_1$, $v_2$) and three edges ($e_1$, $e_2$, $e_3$), where $e_3$ has distinct endpoints $v_1$ and $v_2$, and $e_1$ and $e_2$ are loops based at $v_1$ and $v_2$.
+        \item A \term{constituent link $H_{12}$}, is a subgraph of $H$
 		that consists of two vertices $v_1$, $v_2$ and two edges $e_1$, $e_2$.
 
 	\end{itemize}
