--- a/main.ppt/main.tex
+++ b/main.ppt/main.tex
@@ -115,8 +115,8 @@
 \end{frame}
 
 \include{intro.tex}
-% \include{cromwell1.tex}
-%\include{cromwell2.tex}
+\include{cromwell1.tex}
+\include{cromwell2.tex}
 %\include{L Bound.tex}
 
 \begin{frame}[standout,plain]
