--- a/main.ppt/main.tex
+++ b/main.ppt/main.tex
@@ -114,9 +114,9 @@
 	\titlepage
 \end{frame}
 
-\include{intro.tex}
+%\include{intro.tex}
 \include{cromwell1.tex}
-\include{cromwell2.tex}
+%\include{cromwell2.tex}
 %\include{L Bound.tex}
 
 \begin{frame}[standout,plain]
