--- a/main.ppt/cromwell1.tex
+++ b/main.ppt/cromwell1.tex
@@ -1,10 +1,18 @@
 \section{Classifying by Determinant}
 \begin{frame}{THC-cromwell matrix}
 	\begin{itemize}
-		\item The \term{THC-cromwell matrix} is an expansion of cromwell matrix into $\theta$-curves and handcuff graphs
+		\item The \term{Cromwell Matrix} of a knot is an $n\times n$ binary matrix each of whose rows and columns has exactly two 1s.
+		\item The \term{THC-cromwell matrix} is an expansion of cromwell matrix into $\theta$-curves and handcuff graphs.
 	\end{itemize}
 	\vspace{1cm}
-	\begin{tabu}{X[5c]X[c]X[5c]}
+	\begin{tabu}{X[5c]X[5c]X[c]X[5c]}
+		$\begin{bmatrix}
+			1 & 0 & 1 & 0 & 0\\
+			0 & 1 & 0 & 1 & 0\\
+			0 & 0 & 1 & 0 & 1\\
+		    1 & 0 & 0 & 1 & 0\\
+			0 & 1 & 0 & 0 & 1
+		\end{bmatrix}$&
 		\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/excromwell.png}} &			
 		$\longmapsto$ &
 		\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/cromwell.png}} &
@@ -14,18 +22,18 @@
 
 \begin{frame}{Determinant of the cromwell matrices of Knot}
 	\begin{thm}
-		Let $K$ be any knot then its determinant of the cromwell matrix is $0$ or $\pm2$.
+		Let $K$ be a knot. Then a cromwell matrix of $K$ has determinant $0$ or $\pm2$.
 	\end{thm}
 	\mypf
 	\begin{tabu}{X[5c]X[2c]X[5c]X[c]X[2c]}
 			\raisebox{-1.5cm}{\includegraphics[height=3cm]{trefoilimage.png}} &
 			$\xmapsto{\text{grid diagram}}$ &
 			\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/gridtheta.png}} &
-			$\xmapsto{THC-cromwell}$ &
+			$\xmapsto{Cromwell}$ &
 	\end{tabu}
 	\begin{tabu}{X[c]X[1.5c]X[5c]X[c]X[5c]}
 			\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/white.png}} &
-			$\xmapsto{THC-cromwell}$ &
+			$\xmapsto{Cromwell}$ &
 			$\begin{bmatrix}
 				\textcolor{red}{1} & 0 & \textcolor{red}{1} & 0 & 0\\
 				0 & \textcolor{red}{1} & 0 & \textcolor{red}{1} & 0\\
@@ -104,6 +112,8 @@
 \end{frame}
 \begin{frame}{H-deletion of THC-cromwell matricies}
 	\begin{itemize}
+		\item The \term{vertex-row} of THC-cromwell matrix $M$ is a row which contains three 1s, $M_{ia},M_{ib},M_{ic}$, where $a<b<c$, as its elements.
+		\item The \term{side-row} of THC-cromwell matrix $M$ is a column which contains the leftmost 1 of vertex-row $(M_{ia})$ or the rightmost 1 of vertex row $(M_{ic})$.
 		\item The \term{H-deletion} Matrix of the THC-cromwell
  		matrix G is $(n-1)\times(n-1)$ matrix\\ which deleted vertex-row and its two side-rows from the 
  		matrix G.
@@ -140,13 +150,13 @@
 	\begin{thm}
 		Let $M$ be any THC-cromwell matrice of $\theta$-curve or handcuff graph. \\
 		\begin{itemize}
-			\item det($M$) = $\pm1$ $\iff$ $M$ represents $\theta$-curve
-			\item det($M$) = $0$ or $\pm2$ $\iff$ $M$ represents handcuff graph
+			\item det*($M$) = $\pm1$ $\iff$ $M$ represents $\theta$-curve
+			\item det*($M$) = $0$ or $\pm2$ $\iff$ $M$ represents handcuff graph
 		\end{itemize}
-		*det($M$) = determinant of H-deletion matrix of $M$
+		 where det*($M$) = determinant of H-deletion matrix of $M$
 	\end{thm}
 	\mypf
-	\begin{tabu}{X[5c]X[c]X[5c]X[c]X[5c]}
+	\begin{tabu}{X[5c]X[c]X[5c]X[2c]X[5c]}
 			$\begin{bmatrix}
 			\textcolor{RoyalBlue}{1} & 0 & \textcolor{RoyalBlue}{1} & 0 & \textcolor{RoyalBlue}{1} & 0 & 0\\
 			0 & \textcolor{RoyalBlue}{1} & 0 & 0 & 0 & 0 & \textcolor{RoyalBlue}{1}\\
@@ -155,11 +165,26 @@
 			0 & 0 & 0 & 0 & \textcolor{RoyalBlue}{1} & 0 & \textcolor{RoyalBlue}{1}\\
 			0 & \textcolor{RoyalBlue}{1} & 0 & \textcolor{RoyalBlue}{1} & 0 & \textcolor{RoyalBlue}{1} & 0\\
 			\end{bmatrix}$&
-			$\longmapsto$ &
+			$\longleftrightarrow$ &
 			\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/exT-shape.png}} &
-			$\longmapsto$ &
+			$\xmapsto{H-deletion}$  &
 			\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/T-shape.png}} 
 	\end{tabu}
+\end{frame}
+
+\begin{frame}
+	\begin{enumerate}
+		\item[\mybf{CASE 1.}] \mybf{When $M$ represents $\theta$-curve}
+	\end{enumerate}
+	%\begin{tabu}{X[c]X[c]X[c]}
+    %    \raisebox{-1cm}{\includegraphics[height=1cm]{figure/n=3.png}} &
+    %    \raisebox{-1cm}{\includegraphics[height=1cm]{figure/Line-shape.png}} &
+    %    \raisebox{-1cm}{\includegraphics[height=1cm]{figure/T-shape.png}} \\
+    %    Trivial $\theta$ & Line-shape & T-shape
+    %\end{tabu}
+	\begin{center}
+		\includegraphics[height=6.5cm]{figure/table.png}
+	\end{center}
 \end{frame}
 
 \begin{frame}
