--- a/main.ppt/intro.tex
+++ b/main.ppt/intro.tex
@@ -77,7 +77,7 @@
 
 \begin{frame}{Grid Diagram}
 	\begin{itemize}
-        \item The \term{grid diagram} of theta-curve or handcuff graph is a diagram with only vertical strand and horizontal strands.
+        \item The \term{grid diagram} of theta-curve or handcuff graph is a diagram with only vertical and horizontal strands.
         \item (number of vertical strands) + 1 = (number of horizontal strands)
         \item At every crossing, the vertical strand crosses over the horizontal strand.
         \item No two horizontal strands are in the same row.
