--- a/main.ppt/cromwell2.tex
+++ b/main.ppt/cromwell2.tex
@@ -35,7 +35,7 @@
 			\end{bmatrix}$&
 			$\longmapsto$ &
 			\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/T-loop.png}} &
-			$\xmapsto{H-deletion}$ &
+			$\xmapsto[only \, T-loop]{H-deletion}$ &
 			$\begin{bmatrix}
 			0 & \textcolor{RoyalBlue}{1} & 0 \\
 			\textcolor{RoyalBlue}{1} & \textcolor{RoyalBlue}{1} & \textcolor{RoyalBlue}{1} \\
