--- a/main.ppt/main.tex
+++ b/main.ppt/main.tex
@@ -102,7 +102,7 @@
 }
 \date{
 	\begin{flushright}
-		SEP 6, 2025
+		NOV 5, 2025
 	\end{flushright}
 	}
 
@@ -114,9 +114,9 @@
 	\titlepage
 \end{frame}
 
-%\include{intro.tex}
+\include{intro.tex}
 \include{cromwell1.tex}
-%\include{cromwell2.tex}
+\include{cromwell2.tex}
 %\include{L Bound.tex}
 
 \begin{frame}[standout,plain]
