--- a/main.ppt/main.tex
+++ b/main.ppt/main.tex
@@ -116,9 +116,9 @@
 \end{frame}
 
 %\include{intro.tex}
-\include{cromwell1.tex}
+%\include{cromwell1.tex}
 %\include{cromwell2.tex}
-%\include{L Bound.tex}
+\include{L_Bound.tex}
 
 \begin{frame}[standout,plain]
 	\TINY
