--- a/main.ppt/L_Bound.tex
+++ b/main.ppt/L_Bound.tex
@@ -142,12 +142,12 @@
 
 \begin{frame}{Lower Bounds from Yamada Polynomial}
 	\begin{thm}
-	Let $T$ be any $\theta$-curve.
+	Let $T$ be any $\theta$-curve or handcuff graph.
 	Then
 	\[
-		2 + \sqrt{\max\deg_xR(S_T) - \min\deg_xR(S_T) + 4} \le \alpha(T)
+		2 + \sqrt{\max\deg_xR(S_T) - \min\deg_xR(S_T) - 4} \le \alpha(T)
 	\]
-	where $R(T)$ is a Yamada Polynomial of the $\theta$-curve $T$.
+	where $R(T)$ is a Yamada Polynomial of $T$.
 	\end{thm}	
 \end{frame}
 
@@ -292,7 +292,7 @@
 
 \begin{frame}
 	\begin{prop}
-		Let $S_T$ be a reduced simple closure of stacked tangle of a $\theta$-curve $T$
+		Let $S_T$ be a reduced simple closure of stacked tangle of a $\theta$-curve or handcuff graph $T$
 		corresponding to minimal arc presentation of $T$.
 		Then
 		\[
